--- a/src/FanControl.HardDiskSentinel/FanControl.HardDiskSentinel.csproj
+++ b/src/FanControl.HardDiskSentinel/FanControl.HardDiskSentinel.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="PowerShellStandard.Library" Version="5.1.0" />
 	  <PackageReference Include="System.Management" Version="5.0.0" />
 	</ItemGroup>
 
